packages/coln-compiler/test/ancestor.output
-- elaborated
global entry named Family
type:  Theory
value:  sig
  person : Set
  is-parent : person -> person -> Set
end

-- messages

error[E0200]: unexpected notation for argument binding of the form `<name> : <type>`: Infix
6 | theory AncestorRelation (F *: Family) := sig
6 |                          ^^^^^^^^^^^

error[E0200]: unexpected notation for argument binding of the form `<name> : <type>`: Infix
12 | def AncestryFor (F *: Family) : Inductive (AncestorRelation F) := init (AncestorRelation F)
12 |                  ^^^^^^^^^^^
